[project]
name = "toyrover"
version = "0.1.0"
description = "Toy Rover demo project"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy>=2.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
main = "toyrover.run:run"
